gcc/testsuite/g++.dg/parse/octal1.C
int i = 08; // { dg-error "" }
